# jarvis-agent

./: README.md  pyproject.toml  requirements.txt
jarvis_agent/: __main__.py  app.py  dependencies.py  settings.py
jarvis_agent/routes/: health.py  voice_control.py  websocket.py  websocket_api.py
jarvis_agent/services/: backend_client.py  jarvis_app_client.py  voice_processor.py  websocket_manager.py
jarvis_agent/services/audio/: audio_handler.py  sounddevice_audio_handler.py
jarvis_agent/utils/: logger.py
